[package]
name = "cf-ddns"
version = "0.4.0"
edition = "2024"

license = "AGPL-3.0-or-later"
authors = ["Sola <dev@sola.love>"]
description = "DDNS updater for Cloudflare"
repository = "https://github.com/unlimitedsola/cf-ddns"
readme = "README.md"

[features]
default = ["service"]
service = ["dep:windows", "tokio/signal"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
const_format = "0.2.35"
futures = "0.3.31"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
tokio-stream = "0.1.18"
toml = "0.9.12"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
optional = true
features = [
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Services",
    "Wdk_System_Threading",
    "Wdk_System_SystemInformation",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
