[package]
name = "cf-ddns"
version = "0.5.0"
edition = "2024"

license = "AGPL-3.0-or-later"
authors = ["Sola <dev@sola.love>"]
description = "DDNS updater for Cloudflare"
repository = "https://github.com/unlimitedsola/cf-ddns"
readme = "README.md"

[features]
default = ["service"]
service = ["tokio/signal"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
const_format = "0.2.35"
futures = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
    "query",
    "json",
] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["rt", "macros", "process"] }
tokio-stream = "0.1.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"

[target.'cfg(unix)'.dependencies]
libc = "0.2.184"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.8"
netlink-packet-route = "0.30"
netlink-sys = "0.8"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Services",
    "Wdk_System_Threading",
    "Wdk_System_SystemInformation",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
